feat: 리스트 관련 오류 수정